...
        }
        if (error) {
          return (
            <ListItem onPressItem={retry}>
              <ListItem.Content>
                <View style={styles.card}>
                  <P>Error while loading. Click here to retry...</P>
                </View>
              </ListItem.Content>
            </ListItem>
          );
        }
        return null;
...
